--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'war'
-	id 'org.sonarqube' version '8.9.9'
+	id 'org.sonarqube' version '3.3'
 }
 
 group = 'com.example'
@@ -29,6 +29,6 @@ test {
 sonarqube {
     properties {
         property 'sonar.host.url', 'http://146.148.82.93:9000/'
-        property 'sonar.login', 'admin123'
+        property 'sonar.login', '******'
     }
 }
