--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.1.1-bin.zip
+distributionUrl=https://services.gradle.org/distributions/gradle-7.5.1-wrapper.jar.sha256
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
